Continue association analyis
Former-commit-id: a6cd46f004173e3b0ef91aac90613c19cb1e7579

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -43,7 +43,8 @@
     "#            1521738 ,2136829 ,297278 ,426363 ,426330 ,151796 ,305192 ,259271 ,388172 ,265150 ,54184 ,472623 ,419001 ,25273 ,26195 ,32448 ,199832 ,]# WD ALL_10-800\n",
     "srcs_ids = [535864 ,451644 ,541266 ,625693 ,494782 ,166179 ,172775 ,34658 ,98746 ,1521738 ,2136829 ,426363 ,426330 ,151796 ,305192 ,388172 ,265150 ,54184 ,472623 ,419001 ,25273 ,26195 ,32448 ,]# WD ALL_10-800\n",
     "srcs_ids = [535864 ,451644 ,541266 ,581995 ,187856 ,166179 ,34658 ,426363 ,151796 ,259271 ,419001 ,25273 ,]\n",
-    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]"
+    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]\n",
+    "srcs_ids = [65591 ,167210 ,]"
    ]
   },
   {
@@ -121,12 +122,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf311791fa324cf3a20bfd14d743f46e",
+       "model_id": "0e91e634d0e24defb5bd7a3dcb343b1d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 407685, 322799, 94932, 99675, 87105),…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(65591, 167210), value=65591), Output()), _dom…"
       ]
      },
      "execution_count": 3,
@@ -212,12 +213,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e9c99c773b54b5a9e370ecdd284b0ed",
+       "model_id": "e2ba1bfa37d043e490d1c080b40ea1d9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='block_nr', max=1), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='block_nr', max=0), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
