Adding source name
Former-commit-id: 3d642890ea08e2120ddeb783afae3c97eb93d6b5

--- a/vasca/examples/inspect_GALEX.ipynb
+++ b/vasca/examples/inspect_GALEX.ipynb
@@ -60,7 +60,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table139684360494464\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139792669843248\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<thead><tr><th>bytes7</th><th>bytes5</th><th>bytes3</th><th>bytes5</th><th>bytes3</th><th>bytes3</th><th>bytes2</th><th>bytes16</th><th>bytes1</th><th>bytes19</th><th>float64</th><th>float64</th><th>bytes5</th><th>bytes1</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bytes1</th><th>float64</th><th>bytes1</th><th>bytes3</th><th>int64</th><th>bytes43</th><th>bytes130</th><th>bytes124</th><th>bytes6</th><th>bool</th><th>float64</th><th>bytes4</th><th>bytes4</th></tr></thead>\n",
        "<tr><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>True</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
@@ -147,7 +147,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=25983</i>\n",
-       "<table id=\"table139684360716640\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139792670278704\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nuv_phot_rate</th><th>nPhotoObjects</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2411539199493668864</td><td>147.0661637032415</td><td>-0.504841940754146</td><td>1163.5</td><td>1163.5</td><td>237.37221641899384</td><td>38.061087862771245</td><td>5.7927270755747</td><td>6688.0</td><td>2327.0</td><td>2327.0</td><td>2</td><td>MIS</td><td>2/25/2007 5:39:18 AM</td><td>2/25/2007 5:56:33 AM</td></tr>\n",
@@ -258,7 +258,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table139685958901168\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139792670287584\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nuv_phot_rate</th><th>nPhotoObjects</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2482083865531777024</td><td>11.8910606122809</td><td>-25.283705129307165</td><td>1367.5181818181818</td><td>298.2863636363636</td><td>97.4942074076784</td><td>-87.96105753853617</td><td>8.416246655156435</td><td>9785.09090909091</td><td>15042.699999999999</td><td>3281.1499999999996</td><td>11</td><td>NGS</td><td>10/13/2003 7:40:26 AM</td><td>10/13/2003 8:07:46 AM</td></tr>\n",
@@ -295,7 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22152/2760055361.py:30: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/tmp/ipykernel_15044/2760055361.py:30: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  print(sur,\": Visits =\",nvis,\",exposure =\",int(exp_sum),\"s ,exposure per visit =\",exp_sum/nvis,\"s\")\n"
      ]
     }
@@ -360,7 +360,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=44795</i>\n",
-       "<table id=\"table139684360730128\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139792670283408\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nuv_phot_rate</th><th>nPhotoObjects</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2391589660720627712</td><td>210.542232477159</td><td>-32.6804067553693</td><td>544.0</td><td>544.0</td><td>319.74270865062874</td><td>27.871918173555255</td><td>14.303308823529411</td><td>7781.0</td><td>544.0</td><td>544.0</td><td>1</td><td>NGS</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td></tr>\n",
@@ -407,7 +407,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=10244</i>\n",
-       "<table id=\"table139684360731904\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139794277157472\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th><th>vis_id</th><th>exp_ratio</th><th>minPhotoObsDate_MJD</th><th>maxPhotoObsDate_MJD</th><th>delta_time_phot</th><th>nuv_tphot_frac</th><th>nuv_phot_rate</th></tr></thead>\n",
        "<thead><tr><th>float64</th><th>float64</th><th>bytes3</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>bytes6</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes5</th><th>bytes4</th><th>bytes4</th><th>bytes4</th><th>int64</th><th>int64</th><th>bytes22</th><th>bytes22</th><th>bytes4</th><th>bytes4</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>11.8937785394012</td><td>-25.2887963267737</td><td>NGS</td><td>1640.05</td><td>1640.05</td><td>2482083728193486848</td><td>2482083865531777024</td><td>9429</td><td>5009</td><td>-999</td><td>visitI</td><td>11947</td><td>1</td><td>10/13/2003 7:40:26 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>4</td><td>-999</td><td>10/13/2003 7:40:26 AM</td><td>10/13/2003 8:07:46 AM</td><td>null</td><td>null</td><td>52925.31974537037</td><td>97.49585998833946</td><td>-87.96673545716985</td><td>2482083728193486848</td><td>1.0</td><td>52925.31974537037</td><td>52925.33872685185</td><td>1639.9999998975545</td><td>0.999969513062135</td><td>7.284534008109509</td></tr>\n",
@@ -524,7 +524,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "102af8ebe99c4447b51bdcba2f54a3f7",
+       "model_id": "b142751bdf2b412099591f2de63ebb1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "6c65650c-fa84-4e13-8c27-21257342cb18",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b887adc5184a4f8ca9b266349aac134f",
+       "model_id": "7b489ed8cfe848268f378cc1c92159dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -618,7 +618,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab0ae5158dc74156a6b15d6e63ca4f24",
+       "model_id": "64c85099024e459a9f232a7b03f36464",
        "version_major": 2,
        "version_minor": 0
       },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "bfa35f48-7b74-45d8-89c8-21b6da9b8d34",
    "metadata": {},
    "outputs": [
@@ -700,8 +700,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.34861882 3.67168753] 1e-06 Jy\n",
-      "[22.58783571 22.48783571] mag(AB)\n"
+      "[2.00917129 2.20301252] 1e-06 Jy\n",
+      "[23.14245759 23.04245759] mag(AB)\n"
      ]
     }
    ],
@@ -710,10 +710,12 @@
     "\n",
     "#Sensitivity from MORRISSEY 2007\n",
     "t_ref = 1500\n",
+    "sig_ref = 5\n",
     "t_sens = 1220\n",
+    "sig_sens = 3\n",
     "m_AB = [22.7,22.6] # NUV/FUV\n",
     "flux = mag2flux(m_AB)\n",
-    "flux_sens = np.sqrt(t_ref/t_sens)*flux\n",
+    "flux_sens = np.sqrt(t_ref/t_sens)*flux*sig_sens/sig_ref\n",
     "print(flux_sens)\n",
     "print(flux2mag(flux_sens))"
    ]
