Modified column descriptions
Former-commit-id: 55f69d193b03197b633ca4bbce195fac0db2bb23

--- a/vasca/examples/vasca_pipe_post_process.ipynb
+++ b/vasca/examples/vasca_pipe_post_process.ipynb
@@ -145,6 +145,19 @@
     "    add_ogrp(rc.tt_simbad)\n",
     "    add_ogrp(rc.tt_gaiadr3,provenance=\"GAIA\")\n",
     "\n",
+    "    src_coords = SkyCoord(ra=rc.tt_sources[\"ra\"].quantity, dec=rc.tt_sources[\"dec\"].quantity, frame='icrs')\n",
+    "    #print(src_coords.to_string('hmsdms')) #'decimal'\n",
+    "    src_names = [] \n",
+    "    for coord in src_coords:\n",
+    "        scoord = coord.to_string('hmsdms', precision=1, alwayssign=True, pad=False, fields=3, format=None)\n",
+    "        scoord = scoord.replace(\"s \",\"\").replace(\"s\",\"\").replace(\"d\",\"\").replace(\"m\",\"\").replace(\"h\",\"\")\n",
+    "        # dec_sgn =\"+\"\n",
+    "        # if src[\"dec\"]< 0:\n",
+    "        #     dec_sgn=\"-\"\n",
+    "        #src_names.append(\"1UVA J\"+str(np.round(src[\"ra\"], 3)).zfill(7)+dec_sgn+str(np.round(np.abs(src[\"dec\"]), 3)).zfill(3))\n",
+    "        src_names.append((\"1UVA J\"+scoord).replace(\"J+\",\"J\"))\n",
+    "    rc.add_column(\"tt_sources\", \"src_name\", col_data=src_names)\n",
+    "\n",
     "if do_LombScargle:\n",
     "    rc.set_LombScargle(nbins_min=20)\n",
     "\n",
