Modified plots for paper
Former-commit-id: bfa211567792a4bee31a883c04fd3eacb13185d5

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -34,17 +34,8 @@
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "srcs_ids = []\n",
-    "srcs_ids = [4993 ,13580 ,14504 ,30475 ,50388 ,52994 ,79477 ,120265 ,138783 ,139480 ,162697 ,204419 ,221349 ,228958 ,236839 ,253214 ,253670\n",
-    "            ,256433 ,261213 ,331466 ,340464 ,381336 ,390864 ,489430 ,498065 ,525310 ,532554 ,533185 ,540235 ,583838 ,639720 ,645215 ,645730\n",
-    "            ,659787 ,666224 ,673175 ,680119 ,691408 ,714140 ,764827 ,1037284 ,1069077 ,1070938 ,1805505 ,1839206 ,2527679 ,3074917 ,] # WD ALL_10-800-LOOSE\n",
-    "#srcs_ids = [4993,14504,52994,120265,221349,236839,381336,525310,533185,639720,666224,673175,680119,1070938] # # WD ALL_10-800-LOOSE BB SED# Additional candidates 139480,204419,532554,659787,79477,,253214\n",
-    "srcs_ids = [14504,52994,221349,639720,666224]  # # WD ALL_10-800-LOOSE BB SED, gphot agree\n",
-    "#srcs_ids = [193067 ,432606 ,535864 ,451644 ,1551422 ,541266 ,581995 ,625693 ,187856 ,8215 ,494782 ,166179 ,172775 ,34658 ,98746 ,\n",
-    "#            1521738 ,2136829 ,297278 ,426363 ,426330 ,151796 ,305192 ,259271 ,388172 ,265150 ,54184 ,472623 ,419001 ,25273 ,26195 ,32448 ,199832 ,]# WD ALL_10-800\n",
-    "srcs_ids = [535864 ,451644 ,541266 ,625693 ,494782 ,166179 ,172775 ,34658 ,98746 ,1521738 ,2136829 ,426363 ,426330 ,151796 ,305192 ,388172 ,265150 ,54184 ,472623 ,419001 ,25273 ,26195 ,32448 ,]# WD ALL_10-800\n",
-    "srcs_ids = [535864 ,451644 ,541266 ,581995 ,187856 ,166179 ,34658 ,426363 ,151796 ,259271 ,419001 ,25273 ,]\n",
-    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]\n",
-    "srcs_ids = [65591 ,167210 ,]"
+    "srcs_ids = [65591 ,167210 ,] # ALL_10-800 - SN\n",
+    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]# ALL_10-800 - WD"
    ]
   },
   {
@@ -122,12 +113,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e91e634d0e24defb5bd7a3dcb343b1d",
+       "model_id": "0ba78ebe3af6414f91da589d679f5507",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(65591, 167210), value=65591), Output()), _dom…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 407685, 322799, 94932, 87105), value=…"
       ]
      },
      "execution_count": 3,
@@ -137,7 +128,7 @@
    ],
    "source": [
     "#Define displayed tables and columns\n",
-    "disp_tt_sources = ['ra','dec','rg_src_id','flux_cpval','flux',\"flux_ne\",'nr_det','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux_err','flux_nxv','flux_rchiq','coadd_ffactor',\n",
+    "disp_tt_sources = ['src_name','ra','dec','rg_src_id','flux_cpval','flux',\"flux_ne\",'nr_det','pos_err','pos_xv','pos_cpval','pos_rchiq','coadd_src_id','coadd_dist','obs_filter_id','flux_err','flux_nxv','flux_rchiq','coadd_ffactor',\n",
     "                   'coadd_fdiff_s2n','nr_fd_srcs','hr','hr_err','gfcat_src_id'] #'fd_src_id','rg_fd_id,,'pos_var','flux_var','sel', ,'simbad_match_id','gaiadr3_match_id', 'gfcat_dist'\n",
     "disp_tt_simbad = ['ogrp','otypes','main_id','otype','sp_type','sp_bibcode','ra','dec','ra_prec','dec_prec','coo_err_maja','coo_err_mina','coo_err_angle','coo_qual','coo_wavelength','coo_bibcode','distance_distance','distance_q','distance_unit',\n",
     "                  'distance_merr','distance_perr','distance_method','distance_bibcode','match_distance','rvz_type','rvz_radvel','rvz_error','rvz_qual','rvz_wavelength','rvz_bibcode','z_value','sp_qual','simbad_match_id'] #,'rg_src_id',,'script_number_id'\n",
@@ -154,16 +145,19 @@
     "\n",
     "    #Prepare figure\n",
     "\n",
-    "    fig, ax = plt.subplots(1,1,figsize=(18, 6),squeeze=True, num=\"LC source ID \" + str(rg_src_id), clear=True) #, gridspec_kw={'width_ratios': [2, 1]}\n",
-    "    _ = vvis.plot_light_curve(tc_src, ax = ax)\n",
-    "    plt.show()\n",
-    "    #axs = axs.flatten()\n",
+    "    fig, ax = plt.subplots(1,2,figsize=(18, 6), clear=True, gridspec_kw={'width_ratios': [1.5, 2]}) #, ,squeeze=True, \"LC source ID \" + str(rg_src_id)\n",
+    "    plt.subplots_adjust(left=0.05, bottom=None, right=0.95, top=None, wspace=0.235, hspace=None)\n",
+    "    fig.set_tight_layout(False)\n",
+    "    axs = ax.flatten()\n",
+    "    _ = vvis.plot_light_curve(tc_src, ax = axs[1])\n",
+    "    #plt.show()\n",
+    "    \n",
     "    \n",
     "    #Plot light curve und SED\n",
     "     #\n",
     "    if show_sed:\n",
-    "        fig, ax = plt.subplots(1,1,figsize=(12, 8),squeeze=True, num=\"Spec source ID \" + str(rg_src_id), clear=True) \n",
-    "        _ = vvis.plot_sed(tc_src,ax = ax)\n",
+    "        #fig, ax = plt.subplots(1,1,figsize=(12, 8),squeeze=True, num=\"Spec source ID \" + str(rg_src_id), clear=True) \n",
+    "        _ = vvis.plot_sed(tc_src,ax = axs[0])\n",
     "    plt.show()\n",
     "\n",
     "    #If lomb scargle present and signal is at more than 3 sigma plot it too\n",
@@ -213,12 +207,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2ba1bfa37d043e490d1c080b40ea1d9",
+       "model_id": "b9c0fac2bcfb409fa9ac0ef212b74aee",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='block_nr', max=0), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='block_nr', max=1), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
