--- a/vasca/examples/select_sources.ipynb
+++ b/vasca/examples/select_sources.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "region_name = \"ALL_10-800\" #\"CAINGSGII_10-800\" #\"TDS\" #\"CAINGSGII_10-800\" #\"WD\" #\"MDIS_10-800\" #\"TDS\" #  _ELAISN1\n",
-    "region_cat_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\""
+    "region_dir_name = \"./vasca_pipeline/\"+region_name+\"/\"\n",
+    "region_cat_fname = region_dir_name+\"region_\"+region_name+\"_cat.fits\""
    ]
   },
   {
@@ -63,7 +64,8 @@
      "text": [
       "Number of GAIA matches is: 3302  (78.58162779628748 )%\n",
       "Number of GAIA WD matches is: 11  (0.2617801047120419 )%\n",
-      "Total number of matches is: 3656  (87.00618752974773 )%\n"
+      "Total number of matches is: 3656  (87.00618752974773 )%\n",
+      "Total number of sources is: 4202\n"
      ]
     },
     {
@@ -80,7 +82,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=0</i>\n",
-       "<table id=\"table140070132020896\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139863350734192\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>main_id</th><th>ra</th><th>dec</th><th>ra_prec</th><th>dec_prec</th><th>coo_err_maja</th><th>coo_err_mina</th><th>coo_err_angle</th><th>coo_qual</th><th>coo_wavelength</th><th>coo_bibcode</th><th>otype</th><th>otypes</th><th>distance_distance</th><th>distance_q</th><th>distance_unit</th><th>distance_merr</th><th>distance_perr</th><th>distance_method</th><th>distance_bibcode</th><th>match_distance</th><th>rvz_type</th><th>rvz_radvel</th><th>rvz_error</th><th>rvz_qual</th><th>rvz_wavelength</th><th>rvz_bibcode</th><th>z_value</th><th>sp_type</th><th>sp_qual</th><th>sp_bibcode</th><th>script_number_id</th><th>rg_src_id</th><th>simbad_match_id</th><th>ogrp</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th>mas</th><th>mas</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th><th>km / s</th><th>km / s</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes32</th><th>float64</th><th>float64</th><th>int16</th><th>int16</th><th>float32</th><th>float32</th><th>int16</th><th>bytes1</th><th>bytes1</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>bytes1</th><th>bytes4</th><th>float64</th><th>float64</th><th>bytes8</th><th>bytes19</th><th>float32</th><th>bytes1</th><th>float64</th><th>float32</th><th>bytes1</th><th>bytes1</th><th>bytes32</th><th>float64</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>int32</th><th>int32</th><th>int32</th><th>bytes8</th></tr></thead>\n",
@@ -101,7 +103,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=3330</i>\n",
-       "<table id=\"table140070025311520\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139863244422352\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>_q</th><th>ra</th><th>dec</th><th>Source</th><th>e_RA_ICRS</th><th>e_DE_ICRS</th><th>Plx</th><th>e_Plx</th><th>PM</th><th>pmRA</th><th>e_pmRA</th><th>pmDE</th><th>e_pmDE</th><th>RUWE</th><th>FG</th><th>e_FG</th><th>Gmag</th><th>FBP</th><th>e_FBP</th><th>BPmag</th><th>FRP</th><th>e_FRP</th><th>RPmag</th><th>BP-RP</th><th>RV</th><th>e_RV</th><th>Vbroad</th><th>GRVSmag</th><th>QSO</th><th>Gal</th><th>NSS</th><th>XPcont</th><th>XPsamp</th><th>RVS</th><th>EpochPh</th><th>EpochRV</th><th>MCMCGSP</th><th>MCMCMSC</th><th>And</th><th>Teff</th><th>logg</th><th>__Fe_H_</th><th>Dist</th><th>A0</th><th>HIP</th><th>PS1</th><th>SDSS13</th><th>SKYM2</th><th>TYC2</th><th>URAT1</th><th>AllWISE</th><th>APASS9</th><th>GSC23</th><th>RAVE5</th><th>_2MASS</th><th>RAVE6</th><th>RAJ2000</th><th>DEJ2000</th><th>PQSO</th><th>PGal</th><th>PSS</th><th>RPlx</th><th>VarFlag</th><th>o_Gmag</th><th>rg_src_id</th><th>match_distance</th><th>gaiadr3_match_id</th><th>Gmag_abs</th><th>Plx_dist</th><th>ogrp</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th>mas</th><th>mas</th><th>mas</th><th>mas</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th></th><th></th><th></th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th>mag</th><th>mag</th><th>km / s</th><th>km / s</th><th>km / s</th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>K</th><th>log(cm.s**-2)</th><th></th><th>pc</th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>pc</th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float32</th><th>float32</th><th>float64</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>int64</th><th>int64</th><th>int32</th><th>bytes12</th><th>bytes15</th><th>bytes19</th><th>int32</th><th>bytes10</th><th>bytes16</th><th>bytes17</th><th>bytes21</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bytes13</th><th>int16</th><th>int32</th><th>float64</th><th>int32</th><th>float32</th><th>float64</th><th>bytes8</th></tr></thead>\n",
@@ -164,27 +166,30 @@
     "rc.tt_sources.sort([\"dec\"])\n",
     "\n",
     "#Add Object group to source table\n",
-    "rc.copy_table_columns(\"tt_sources\",\"tt_simbad\",[\"otype\",\"ogrp\",\"match_distance\",\"sp_type\",\"main_id\"],\"simbad_match_id\")\n",
+    "rc.copy_table_columns(\"tt_sources\",\"tt_simbad\",[\"otype\",\"ogrp\",\"match_distance\",\"sp_type\",\"main_id\"],\"simbad_match_id\",select_matched=True)\n",
     "rc.tt_sources.rename_column(\"match_distance\",\"match_distance_simbad\")\n",
     "rc.tt_sources.rename_column(\"ogrp\",\"ogrp_simbad\")\n",
     "sel_simbad = rc.tt_sources[\"sel\"].data\n",
     "print(f\"Number of SIMBAD matches is: {sel_simbad.sum()}  ({100* sel_simbad.sum() / len(rc.tt_sources)} )%\")\n",
     "\n",
-    "rc.copy_table_columns(\"tt_sources\",\"tt_gaiadr3\",[\"PQSO\", \"PGal\", \"PSS\",\"match_distance\",\"Gmag_abs\",\"BP-RP\", \"ogrp\", \"Plx\",\"e_Plx\",\"Plx_dist\",\"VarFlag\",\"RPlx\"],\"gaiadr3_match_id\")\n",
+    "rc.copy_table_columns(\"tt_sources\",\"tt_gaiadr3\",[\"PQSO\", \"PGal\", \"PSS\",\"match_distance\",\"Gmag_abs\",\"BP-RP\", \"ogrp\", \"Plx\",\"e_Plx\",\"Plx_dist\",\"VarFlag\",\"RPlx\"],\"gaiadr3_match_id\",select_matched=True)\n",
     "rc.tt_sources.rename_column(\"match_distance\",\"match_distance_gaiadr3\")\n",
     "rc.tt_sources.rename_column(\"ogrp\",\"ogrp_gaiadr3\")\n",
     "sel_gaiadr3 = rc.tt_sources[\"sel\"].data\n",
     "print(f\"Number of GAIA matches is: {sel_gaiadr3.sum()}  ({100*sel_gaiadr3.sum() / len(rc.tt_sources)} )%\")\n",
     "\n",
-    "rc.copy_table_columns(\"tt_sources\",\"tt_maincat\",[\"Pwd\"],\"rg_src_id\")\n",
+    "rc.copy_table_columns(\"tt_sources\",\"tt_maincat\",[\"Pwd\"],\"rg_src_id\",select_matched=True)\n",
     "sel_gaia2wd = rc.tt_sources[\"sel\"].data\n",
     "print(f\"Number of GAIA WD matches is: {sel_gaia2wd.sum()}  ({100*sel_gaia2wd.sum() / len(rc.tt_sources)} )%\")\n",
     "\n",
-    "sel_match = np.array(sel_simbad+sel_gaiadr3, dtype=bool)\n",
+    "sel_match = np.array(sel_simbad+sel_gaiadr3+sel_gaia2wd, dtype=bool)\n",
     "print(f\"Total number of matches is: {sel_match.sum()}  ({100*sel_match.sum() / len(rc.tt_sources)} )%\")\n",
     "\n",
     "#Copy lomb scargle result into tt_sources\n",
     "rc.copy_table_columns(\"tt_sources\",\"tt_lombscargle\",[\"ls_peak_pval\", \"ls_model_rchiq\"],\"rg_src_id\")\n",
+    "\n",
+    "rc.tt_sources[\"sel\"]=True\n",
+    "print(f\"Total number of sources is: {rc.tt_sources['sel'].sum()}\")\n",
     "\n",
     "display(rc.tt_simbad[rc.tt_simbad[\"ogrp\"]==\"WD*\"])\n",
     "display(rc.tt_gaiadr3)"
@@ -200,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "52c7472a-a628-488d-a500-dfbfaffa8610",
    "metadata": {},
    "outputs": [
@@ -209,32 +214,38 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "srcs_ids = [65591 ,167210 ,]\n",
+      "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]\n",
       "\n",
-      "Total Nr. of sources: 2 \n",
+      "Total Nr. of sources: 5 \n",
       "\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=2</i>\n",
-       "<table id=\"table140072710171968\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>ra</th><th>dec</th><th>ogrp_gaiadr3</th><th>otype</th><th>sp_type</th><th>main_id</th><th>nr_det</th><th>flux</th><th>flux_cpval</th><th>flux_ne</th><th>Plx_dist</th><th>ls_peak_pval</th><th>ls_model_rchiq</th><th>VarFlag</th><th>Pwd</th><th>RPlx</th><th>rg_src_id</th></tr></thead>\n",
-       "<thead><tr><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th>1e-06 Jy</th><th></th><th></th><th>pc</th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
-       "<thead><tr><th>float64</th><th>float64</th><th>bytes8</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>int32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32</th><th>float32</th><th>float32</th><th>bytes32</th><th>float32</th><th>float32</th><th>int32</th></tr></thead>\n",
-       "<tr><td>53.283919336066226</td><td>-27.247928445672596</td><td>none</td><td>SN*</td><td></td><td>[CBP2015] cdfs1 r 20121007  43A</td><td>27 .. -1</td><td>5.857592 .. -1.0</td><td>5.9373e-41 .. -1.0</td><td>0.3086373 .. --</td><td>-1.0</td><td>4.6418046e-07</td><td>1.9753165</td><td>none</td><td>-1.0</td><td>-1.0</td><td>65591</td></tr>\n",
-       "<tr><td>214.62440598562964</td><td>53.72528505213003</td><td>none</td><td>SN*</td><td>SNIIP</td><td>PS1-11pf</td><td>4 .. 4</td><td>7.4602203 .. 5.308157</td><td>1.0274218e-33 .. 0.7358296</td><td>0.68547076 .. --</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>none</td><td>-1.0</td><td>-1.0</td><td>167210</td></tr>\n",
+       "<div><i>Table length=5</i>\n",
+       "<table id=\"table139863350731984\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>src_name</th><th>ra</th><th>dec</th><th>ogrp_gaiadr3</th><th>otype</th><th>sp_type</th><th>main_id</th><th>nr_det</th><th>flux</th><th>flux_cpval</th><th>flux_ne</th><th>Plx_dist</th><th>ls_peak_pval</th><th>ls_model_rchiq</th><th>VarFlag</th><th>Pwd</th><th>RPlx</th><th>rg_src_id</th></tr></thead>\n",
+       "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th>1e-06 Jy</th><th></th><th></th><th>pc</th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>bytes24</th><th>float64</th><th>float64</th><th>bytes8</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>int32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32</th><th>float32</th><th>float32</th><th>bytes32</th><th>float32</th><th>float32</th><th>int32</th></tr></thead>\n",
+       "<tr><td>1UVA J04917.1-252556.5</td><td>12.321346896575122</td><td>-25.432354111852234</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J004917.1-252556</td><td>11 .. 1</td><td>73.65471 .. 41.309494</td><td>1.0632669e-08 .. -1.0</td><td>0.04259176 .. --</td><td>99.60556</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>1.0</td><td>39.4121</td><td>357455</td></tr>\n",
+       "<tr><td>1UVA J234829.1-92500.3</td><td>357.12120255365323</td><td>-9.416754993209635</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J234829.1-092500</td><td>14 .. -1</td><td>16.348427 .. -1.0</td><td>1.6703632e-17 .. -1.0</td><td>0.13284326 .. --</td><td>403.82828</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.339561</td><td>4.7312</td><td>407685</td></tr>\n",
+       "<tr><td>1UVA J22222.9-05025.9</td><td>35.59527907918115</td><td>-0.8405203013145769</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J022222.7-005027</td><td>1 .. 9</td><td>26.544712 .. 10.316418</td><td>-1.0 .. 2.1149104e-07</td><td>-- .. 0.18395825</td><td>371.59525</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.988086</td><td>7.7587</td><td>322799</td></tr>\n",
+       "<tr><td>1UVA J221828.6-00012.0</td><td>334.6190008630954</td><td>-0.00334150877900888</td><td>WD*</td><td>WD*</td><td>DAH</td><td>PB  5130</td><td>7 .. 2</td><td>121.26045 .. 42.269413</td><td>2.6516346e-07 .. 0.00661471</td><td>0.04008117 .. 0.07513158</td><td>121.74485</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.994004</td><td>48.3832</td><td>94932</td></tr>\n",
+       "<tr><td>1UVA J231536.9+192449.5</td><td>348.90356888412066</td><td>19.41375937325458</td><td>WD*</td><td>WD?</td><td></td><td>SDSS J231536.88+192448.9</td><td>15 .. 4</td><td>126.54993 .. 38.594788</td><td>7.254814e-15 .. 0.4565092</td><td>0.0423359 .. 0.055154238</td><td>168.92747</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.995758</td><td>39.2334</td><td>87105</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=2>\n",
-       "        ra                 dec         ogrp_gaiadr3 ...   RPlx  rg_src_id\n",
-       "       deg                 deg                      ...                  \n",
-       "     float64             float64          bytes8    ... float32   int32  \n",
-       "------------------ ------------------- ------------ ... ------- ---------\n",
-       "53.283919336066226 -27.247928445672596         none ...    -1.0     65591\n",
-       "214.62440598562964   53.72528505213003         none ...    -1.0    167210"
+       "<Table length=5>\n",
+       "        src_name                ra         ...   RPlx  rg_src_id\n",
+       "                               deg         ...                  \n",
+       "        bytes24              float64       ... float32   int32  \n",
+       "----------------------- ------------------ ... ------- ---------\n",
+       " 1UVA J04917.1-252556.5 12.321346896575122 ... 39.4121    357455\n",
+       " 1UVA J234829.1-92500.3 357.12120255365323 ...  4.7312    407685\n",
+       "  1UVA J22222.9-05025.9  35.59527907918115 ...  7.7587    322799\n",
+       " 1UVA J221828.6-00012.0  334.6190008630954 ... 48.3832     94932\n",
+       "1UVA J231536.9+192449.5 348.90356888412066 ... 39.2334     87105"
       ]
      },
      "metadata": {},
@@ -244,12 +255,12 @@
    "source": [
     "# Make selection\n",
     "sel_otype = rc.tt_sources[\"otype\"] ==  \"SN*\" #\"RR*\"# \"No*\"#\"HS?\" #\"BS*\" #\"PM*\" # # \"SN*\" #\"EB*\"\n",
-    "sel_otypes =   (rc.tt_sources[\"otype\"] ==\"WD*\")*(rc.tt_sources[\"sp_type\"] !=\"none\") +(rc.tt_sources[\"Pwd\"] >0.9) # (rc.tt_sources[\"otype\"] ==  \"WD?\")  + # \n",
+    "sel_otypes =   (rc.tt_sources[\"otype\"] ==\"WD*\")*(rc.tt_sources[\"sp_type\"] !=\"none\")* (rc.tt_sources[\"RPlx\"]>4)+(rc.tt_sources[\"Pwd\"] >0.9) # (rc.tt_sources[\"otype\"] ==  \"WD?\")  + # \n",
     "sel_flux_nxv = rc.tt_sources[\"flux_nxv\"][:,0]>2\n",
     "sel_flux_hr = rc.tt_sources[\"hr\"]>2\n",
     "sel_src_id = rc.tt_sources[\"rg_src_id\"]==15179\n",
     "sel_period = (rc.tt_sources[\"ls_peak_pval\"]>-0.5) * (rc.tt_sources[\"ls_peak_pval\"]<0.000000573303) * (rc.tt_sources[\"ls_model_rchiq\"]<1.1)# # 3 sigma 0.002699796063, 4 sigma 0.000063342484, 5 sigma 0.000000573303\n",
-    "sel_srcs =  sel_otype #sel_period #sel_otypes  #sel_src_id  #sel_flux_nxv #sel_otype # sel_flux_nxv_fuv # sel_flux_hr#\n",
+    "sel_srcs =  sel_otypes #sel_period #sel_otypes  #sel_src_id  #sel_flux_nxv #sel_otype # sel_flux_nxv_fuv # sel_flux_hr#\n",
     "\n",
     "#Print oout list of source IDs to be used for further use, e.g. in inspect_sources.ipynb\n",
     "print(\"\\nsrcs_ids = [\", end=\"\")\n",
@@ -259,18 +270,13 @@
     "print(\"Total Nr. of sources:\",sel_srcs.sum(),\"\\n\")\n",
     "\n",
     "#Display match and simbad table for selected sources\n",
-    "cols_write = [\"ra\",\"dec\",\"ogrp_gaiadr3\",\"otype\",\"sp_type\",\"main_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_ne\",\"Plx_dist\",\"ls_peak_pval\",\"ls_model_rchiq\",\"VarFlag\",\"Pwd\",\"RPlx\",\"rg_src_id\"]\n",
+    "cols_write = [\"src_name\",\"ra\",\"dec\",\"ogrp_gaiadr3\",\"otype\",\"sp_type\",\"main_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_ne\",\"Plx_dist\",\"ls_peak_pval\",\"ls_model_rchiq\",\"VarFlag\",\"Pwd\",\"RPlx\",\"rg_src_id\"]\n",
     "display(rc.tt_sources[sel_srcs][cols_write] )#[\"sp_type\",\"main_id\"]\n",
-    "rc.tt_sources[sel_srcs][cols_write].write(\"sources.ecsv\",overwrite=True,delimiter=',')"
+    "rc.tt_sources[sel_srcs][cols_write].write(region_dir_name+\"sources.ecsv\",overwrite=True,delimiter=',')\n",
+    "\n",
+    "cols_tex = [\"src_name\",\"sp_type\",\"main_id\",\"Plx_dist\",\"RPlx\",\"Pwd\"]\n",
+    "rc.tt_sources[sel_srcs][cols_tex].write(region_dir_name+\"sources.tex\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e96156e-d1ef-4d8a-81ca-ecc8dfbe8238",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
