Modified plots for paper
Former-commit-id: 86642ab42a82423cf150aa39653eb7b03f90c70b

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -113,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba78ebe3af6414f91da589d679f5507",
+       "model_id": "2c6b823cc6e145a69a6e22e2c42e339d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +180,7 @@
     "            else:\n",
     "                display(tc_src.__dict__[table_name][col_names])\n",
     "    \n",
-    "    #tc_src.tt_sed.pprint_all()\n",
+    "    tc_src.tt_sed.pprint_all()\n",
     "\n",
     "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])\n",
     "#2572986 specially clear example"
@@ -207,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9c0fac2bcfb409fa9ac0ef212b74aee",
+       "model_id": "08bb615d5d064f0d86917d30f1ecb956",
        "version_major": 2,
        "version_minor": 0
       },
