Continue HR diagram
Former-commit-id: 3ba31db159a4f30e0374bffb2b846d12e0290851

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -26,16 +26,19 @@
    "outputs": [],
    "source": [
     "region_name = \"ALL_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
-    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
+    "region_dir_name = \"./vasca_pipeline/\"+region_name+\"/\"\n",
+    "region_fname = region_dir_name+\"region_\"+region_name+\"_cat.fits\"\n",
     "show_skymaps = False\n",
     "show_sed = True\n",
     "force_show_LS = False\n",
     "load_src_from_file = True\n",
+    "save_figs = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "srcs_ids = []\n",
     "srcs_ids = [65591 ,167210 ,] # ALL_10-800 - SN\n",
-    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]# ALL_10-800 - WD"
+    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]# ALL_10-800 - WD\n",
+    "srcs_ids = [357455 ,94932]# ALL_10-800 - WD paper"
    ]
   },
   {
@@ -113,12 +116,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c6b823cc6e145a69a6e22e2c42e339d",
+       "model_id": "760568c598814a1b913197b7a5c99ea6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 407685, 322799, 94932, 87105), value=…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 94932), value=357455), Output()), _do…"
       ]
      },
      "execution_count": 3,
@@ -159,6 +162,8 @@
     "        #fig, ax = plt.subplots(1,1,figsize=(12, 8),squeeze=True, num=\"Spec source ID \" + str(rg_src_id), clear=True) \n",
     "        _ = vvis.plot_sed(tc_src,ax = axs[0])\n",
     "    plt.show()\n",
+    "    if save_figs:\n",
+    "        fig.savefig(region_dir_name +\"SED_LC_\"+str(rg_src_id)+\".pdf\")\n",
     "\n",
     "    #If lomb scargle present and signal is at more than 3 sigma plot it too\n",
     "    show_LS = \"tt_lombscargle\" in tc_src._table_names and tc_src.tt_lombscargle[\"ls_peak_pval\"] < 0.002699796063\n",
@@ -207,12 +212,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08bb615d5d064f0d86917d30f1ecb956",
+       "model_id": "8c5c61be87994e69ad14298f54b0b935",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='block_nr', max=1), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='block_nr', max=0), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
